[package]
name = "ouster-lidar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde-big-array = "0.5.1"
chrono = "0.4.38"
derivative = "2.2.0"
itertools = "0.13.0"
num-traits = "0.2.19"
noisy_float = { version = "0.2.0", features = ["serde"] }
measurements = "0.11.0"

[dev-dependencies]
pcap = "2.2.0"
toml = "0.8.19"

[features]
all-tests = ["ouster-client-test"]
ouster-client-test = []
