[package]
name = "velodyne-params"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
measurements = "0.11.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.65"
